<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sep">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/riwayat"
                android:textAlignment="center"
                android:textSize="@dimen/huruf4"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/biruLain"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <!-- Nesting a new LinearLayout for vertical orientation of texts -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/angka1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/huruf4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/survei"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white"
                    android:textSize="@dimen/huruf2" />

                <!-- New TextView for additional text below the "Profile" -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="29dp"
                    android:text="@string/tgl1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/huruf2" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/button12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/kuning"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <!-- Nesting a new LinearLayout for vertical orientation of texts -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/textView13"
                    android:textColor="@color/biruTua"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/angka2"
                    android:textSize="@dimen/huruf4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Sketch"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/biruTua"
                    android:textSize="@dimen/huruf2" />

                <!-- New TextView for additional text below the "Profile" -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="29dp"
                    android:text="@string/tgl2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/biruTua"
                    android:textSize="@dimen/huruf2" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/button13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/biruLain"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <!-- Nesting a new LinearLayout for vertical orientation of texts -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/angka3"
                    android:textColor="@color/white"
                    android:textSize="@dimen/huruf4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Talk"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white"
                    android:textSize="@dimen/huruf2" />

                <!-- New TextView for additional text below the "Profile" -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="29dp"
                    android:text="@string/tgl3"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/huruf2" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/button14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/kuning"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <!-- Nesting a new LinearLayout for vertical orientation of texts -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/angka4"
                    android:textColor="@color/biruTua"
                    android:textSize="@dimen/huruf4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/biruTua"
                    android:textSize="@dimen/huruf2" />

                <!-- New TextView for additional text below the "Profile" -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="29dp"
                    android:text="@string/tgl4"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/biruTua"
                    android:textSize="@dimen/huruf2" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>