<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="0dp"
        android:background="@color/biruTua"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="188dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="337dp"
                android:layout_height="192dp"
                android:layout_weight="1"
                android:background="@color/biruUph"
                android:src="@drawable/user4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:background="@color/biruUph"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/huruf2" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="@string/nim"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/huruf1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@color/biruUph"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/uph"
                    android:textColor="@color/white"
                    android:textSize="@dimen/huruf1" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/medan"
                    android:textColor="@color/white"
                    android:textSize="@dimen/huruf1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="171dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fakultas"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/huruf1" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/jurusan"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/huruf1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tahun"
                    android:textColor="@color/white"
                    android:textSize="@dimen/huruf1" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/semester"
                    android:textColor="@color/white"
                    android:textSize="@dimen/huruf1" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:layout_margin="15dp"
            android:background="@color/biruLain"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <!-- Nesting a new LinearLayout for vertical orientation of texts -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/angka"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/kuning"
                    android:textSize="@dimen/huruf4" />

                <!-- New TextView for additional text below the "Profile" -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="29dp"
                    android:text="@string/sep1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/huruf3" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:layout_margin="15dp"
            android:background="@color/biruLain"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <!-- Nesting a new LinearLayout for vertical orientation of texts -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/kuning"
                    android:textSize="@dimen/huruf4" />

                <!-- New TextView for additional text below the "Profile" -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="29dp"
                    android:text="@string/Ubah"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/huruf3" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>